# cm

1.1_LU/: CMakeLists.txt  scr.bat
1.1_LU/Header/: LU.h
1.1_LU/Source/: LU.cpp  main.cpp
1.2_Prog/: CMakeLists.txt  scr.bat
1.2_Prog/Header/: Prog.h
1.2_Prog/Source/: Prog.cpp  main.cpp
1.3_Iter/: CMakeLists.txt  scr.bat
1.3_Iter/Header/: Iter.h  Zeid.h
1.3_Iter/Source/: Iter.cpp  Zeid.cpp  main.cpp
1.4_Vrasch/: CMakeLists.txt  scr.bat
1.4_Vrasch/Header/: Vrasch.h
1.4_Vrasch/Source/: Vrasch.cpp  main.cpp
1.5_QR/: CMakeLists.txt  scr.bat
1.5_QR/Header/: QR.h
1.5_QR/Source/: QR.cpp  main.cpp
2.1_EQ/: CMakeLists.txt  scr.bat
2.1_EQ/Header/: equation.h
2.1_EQ/Source/: equation.cpp  main.cpp
2.2_SYSEQ/: CMakeLists.txt  scr.bat
2.2_SYSEQ/Header/: sysEquation.h
2.2_SYSEQ/Source/: main.cpp  sysEquation.cpp
3.1_Interpolation/: CMakeLists.txt  scr.bat
3.1_Interpolation/Header/: Lagrange.h  Newton.h
3.1_Interpolation/Source/: Lagrange.cpp  Newton.cpp  main.cpp
3.2_Spline/: CMakeLists.txt  scr.bat
3.2_Spline/Header/: Spline.h
3.2_Spline/Source/: Spline.cpp  main.cpp
3.3_MNK/: CMakeLists.txt  scr.bat
3.3_MNK/Header/: MNK.h
3.3_MNK/Source/: MNK.cpp  main.cpp
3.4_Dif/: CMakeLists.txt  scr.bat
3.4_Dif/Header/: Dif.h
3.4_Dif/Source/: Dif.cpp  main.cpp
3.5_Int/: CMakeLists.txt  scr.bat
3.5_Int/Header/: Int.h
3.5_Int/Source/: Int.cpp  main.cpp
4.1_DU/: CMakeLists.txt  scr.bat
4.1_DU/Header/: DU.h
4.1_DU/Source/: DU.cpp  main.cpp
4.2_DU/: CMakeLists.txt  scr.bat
4.2_DU/Header/: DU2.h
4.2_DU/Source/: DU.cpp  main.cpp
Practik/: CMakeLists.txt  scr.bat
Practik/Header/: Pr.h
Practik/Source/: Pr.cpp  main.cpp
